# hs-playground

./: .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  hie.yaml  hs-playground.cabal  test.db
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.8.4/: hs-playground-0.1.0.0-inplace.conf  package.cache
src/: Aeson.hs  Coerce.hs  Generic.hs  GhcGenerics.hs  HConduit.hs  HResourceT.hs  Main  Main.hs  Maths.hs  MutableArrays.hs  RankNTypes.hs  Sequences.hs  Servant.hs  SqliteSimple.hs  Stm.hs  TypeFamilies.hs  Wai.hs
src/Pearls/: MinFree.hs  Saddleback.hs  Selection.hs  SortingPairwaiseSums.hs  SortingPairwiseSums.hs  Surpasser.hs
