cabal-version:       3.0
name:                hs-playground
version:             0.1.0.0
author:              Nitin Prakash
maintainer:          prakash.nitin63@gmail.com
extra-source-files:  CHANGELOG.md

common common-options
  default-language:  Haskell2010
  build-depends:       base
                     , aeson
                     , blaze-builder
                     , conduit
                     , sqlite-simple
                     , template-haskell
                     , text
                     , unordered-containers
                     , unliftio-core
                     , unliftio
                     , syb
                     , http-types
                     , wai
                     , warp
                     , resourcet
                     , containers
                     , stm

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Aeson
                       Coerce
                       Generic
                       GhcGenerics
                       HConduit
                       HResourceT
                       SqliteSimple
                       TypeFamilies
                       Wai
                       Stm
                       Main

                       -- From the book "Pearls of Functional Algorithm design"
                       -- listed in the order they appear in the book
                       Pearls.MinFree
                       Pearls.Surpasser
                       Pearls.Saddleback
                       Pearls.Selection
                       Pearls.SortingPairwiseSums

executable hs-playground
  import:              common-options
  main-is:             Main.hs
  build-depends:       hs-playground
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -Iw30 -T"
  default-language:    Haskell2010
